fix for safari overflow:hidden

--- a/Scss/_additional.scss
+++ b/Scss/_additional.scss
@@ -3,8 +3,12 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    overflow: hidden;
 }
+
+html,
+body {
+    overflow: hidden;
+} 
 
 #particles-js{
     background: radial-gradient(
